update config phrasing

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4253,7 +4253,7 @@
 <div class="tab-pane fade" id="nav-sensors" role="tabpanel" aria-labelledby="nav-sensors-tab">
     <hr>
 
-    <div><span class="badge rounded-pill bg-info text-dark">Note</span> Hardware Device support requires the Adafruit-Blinka module</div>
+    <div><span class="badge rounded-pill bg-info text-dark">Note</span> Hardware Device support requires the python GPIO modules</div>
 
     <hr>
 
@@ -4743,7 +4743,7 @@
 <div class="tab-pane fade" id="nav-devices" role="tabpanel" aria-labelledby="nav-devices-tab">
     <hr>
 
-    <div><span class="badge rounded-pill bg-info text-dark">Note</span> Hardware Device support requires the Adafruit-Blinka module</div>
+    <div><span class="badge rounded-pill bg-info text-dark">Note</span> Hardware Device support requires the python GPIO modules</div>
 
     <hr>
 
