no need to load images on framerate change

--- a/indi_allsky/flask/templates/mini_generate.html
+++ b/indi_allsky/flask/templates/mini_generate.html
@@ -260,7 +260,7 @@ $("#POST_SECONDS_SELECT").on("change", function() {
 });
 
 $("#FRAMERATE_SELECT").on("change", function() {
-    updateImages();
+    framerate = $('#FRAMERATE_SELECT').val();
 });
 
 </script>
