--- a/indi_allsky/flask/templates/imageviewer.html
+++ b/indi_allsky/flask/templates/imageviewer.html
@@ -197,6 +197,7 @@ function closeFullscreen() {
 <div class="row">
     <div class="text-center">
         <span id="loop_here"></span>
+        <span id="mini_generate_here"></span>
         <span id="chart_here"></span>
         <span id="img_download"></span>
         <span id="fits_download"></span>
@@ -640,6 +641,22 @@ function init() {
                     })
                 )
             );
+
+
+            // Add Mini Timelapse generator
+            $('#mini_generate_here').html(
+                $('<a />', {
+                    'href' : "{{ url_for('indi_allsky.mini_generate_view') }}?image_id=" + image_data[image_index]['id'],
+                    'target' : '_blank',
+                    'rel'    : 'noopener noreferrer',
+                }).html(
+                    $('<span />', {
+                        'text'  : 'Mini Timelapse',
+                        'class' : "badge pill bg-success",
+                    })
+                )
+            );
+
 
             $('#chart_here').html(
                 $('<a />', {
