--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -2826,6 +2826,21 @@
         <div class="col-sm-8">Maximum age of timelapse, keogram, and star trails before deletion</div>
     </div>
 
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TIMELAPSE_OVERWRITE.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.TIMELAPSE_OVERWRITE(class='form-check-input') }}
+                <div id="TIMELAPSE_OVERWRITE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">
+            <div>If a timelapse already exists for a given time, this setting will overwrite the existing entry instead of stopping</div>
+        </div>
+    </div>
+
     <hr>
 
     <div class="form-group row">
@@ -5666,6 +5681,7 @@ const checkbox_field_names = [
     'STARTRAILS_USE_DB_DATA',
     'STARTRAILS_TIMELAPSE',
     'IMAGE_EXIF_PRIVACY',
+    'TIMELAPSE_OVERWRITE',
     'IMAGE_FLIP_V',
     'IMAGE_FLIP_H',
     'IMAGE_CIRCLE_MASK__ENABLE',
