--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -259,6 +259,21 @@
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.ACCUM_CAMERA__SUB_EXPOSURE_MAX.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.ACCUM_CAMERA__SUB_EXPOSURE_MAX(class='form-control bg-secondary') }}
+            <div id="ACCUM_CAMERA__SUB_EXPOSURE_MAX-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Maximum sub-exposure for the accumulator camera.</div>
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.IMAGE_QUEUE_MAX.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
@@ -5589,6 +5604,7 @@ const field_names = [
     'PYCURL_CAMERA__IMAGE_FILE_TYPE',
     'PYCURL_CAMERA__USERNAME',
     'PYCURL_CAMERA__PASSWORD',
+    'ACCUM_CAMERA__SUB_EXPOSURE_MAX',
     'FOCUSER__CLASSNAME',
     'FOCUSER__GPIO_PIN_1',
     'FOCUSER__GPIO_PIN_2',
