update config template

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -267,6 +267,7 @@
         </div>
         <div class="col-sm-8">
             <div>Maximum sub-exposure for the accumulator camera.</div>
+            <div>The total exposure time will be divided by this value and the resulting sub-exposures will be summed into a unsigned 32-bit result</div>
         </div>
     </div>
 
