add link to camera interface wiki

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -64,7 +64,7 @@
         </div>
         <div class="col-sm-7">
             <a href="{{ url_for('indi_allsky.camera_lens_view') }}" class="text-decoration-none link-info">
-                <span class="badge pill bg-danger">Camera Info</span>
+                <div><a href="https://github.com/aaronwmorris/indi-allsky/wiki/Camera-Interfaces" class="text-decoration-none link-info" target="_blank">Camera Interface Wiki</a></div>
             </a>
         </div>
     </div>
